--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "swagger-ui-express": "^5.0.0"
   }
 }
